@@ -291,7 +291,7 @@ void place_special_exit(mapstruct *map, int hole_type, RMParms *RP) {
         OPT_WALLS_ONLY, 0, 0, 1, RP->dungeon_level, RP->dungeon_level,
         RP->difficulty, RP->difficulty, -1, 1, 0, 0, 0, 0, RP->difficulty_increase);
     the_exit->slaying = add_string("/!");
-    the_exit->msg = add_string(buf);
+    object_set_msg(the_exit, buf);
 
     object_insert_in_map_at(the_exit, map, NULL, 0, ix+freearr_x[i], iy+freearr_y[i]);
 }
