@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Fix some memory leaks when updating object->msg.
+Andreas Kirschbaum 2009-07-09
+
 Fix for bug 2.0 wraith feed auto-ready bug? - ID: 1989153 - unarmed skill
 selection is hardcoded.  Add a command - 'unarmed_skill' in which player
 can specify what unarmed skill to use by default instead of the server using
